--- a/g3.html
+++ b/g3.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="g3.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h3 class="font">G3 Architects</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="content">
+                <h1 class="title">Brand New Group of Architects</h1>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
